--- a/Vacuum-Watch/Vacuum-Watch.vcxproj
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="audio.cpp" />
     <ClCompile Include="controller.cpp" />
     <ClCompile Include="game_data.cpp" />
     <ClCompile Include="input.cpp" />
@@ -22,6 +23,7 @@
     <ClCompile Include="view_engine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="audio.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="controller.h" />
     <ClInclude Include="game_data.h" />
