可以显示button了，可以根据其点击事件做事情了

--- a/Vacuum-Watch/Vacuum-Watch.vcxproj.filters
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="audio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h">
