--- a/Vacuum-Watch/Vacuum-Watch.vcxproj
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="audio.cpp" />
+    <ClCompile Include="button.cpp" />
     <ClCompile Include="controller.cpp" />
     <ClCompile Include="game_data.cpp" />
     <ClCompile Include="input.cpp" />
