--- a/Vacuum-Watch/Vacuum-Watch.vcxproj.filters
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\audio">
+      <UniqueIdentifier>{6eb03311-4ac5-421c-84bb-8452a7d08e99}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -86,5 +89,10 @@
     <ClInclude Include="button.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Resource\audio\dreamcatcher.mp3">
+      <Filter>Resource Files\audio</Filter>
+    </None>
   </ItemGroup>
 </Project>
