--- a/Vacuum-Watch/Vacuum-Watch.vcxproj
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj
@@ -38,7 +38,9 @@
     <ClInclude Include="view_engine.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Resource\audio\dreamcatcher.mp3" />
+    <None Include="..\Resource\audio\dreamcatcher.wav" />
+    <None Include="..\Resource\audio\effect1.wav" />
+    <None Include="..\Resource\audio\effect2.wav" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{005FE372-8E04-4EEA-9878-CA8032865F00}</ProjectGuid>
