--- a/Vacuum-Watch/Vacuum-Watch.vcxproj
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj
@@ -34,6 +34,7 @@
     <ClInclude Include="factory.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="module_interfaces.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="testing.h" />
     <ClInclude Include="view_engine.h" />
   </ItemGroup>
@@ -41,6 +42,9 @@
     <None Include="..\Resource\audio\dreamcatcher.wav" />
     <None Include="..\Resource\audio\effect1.wav" />
     <None Include="..\Resource\audio\effect2.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Vacuum-Watch.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{005FE372-8E04-4EEA-9878-CA8032865F00}</ProjectGuid>
