--- a/Vacuum-Watch/Vacuum-Watch.vcxproj
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="game_data.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="load_picture.cpp" />
+    <ClCompile Include="MilkModel.c" />
     <ClCompile Include="option.cpp" />
     <ClCompile Include="factory.cpp" />
     <ClCompile Include="log.cpp" />
@@ -32,6 +33,7 @@
     <ClInclude Include="game_data.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="load_picture.h" />
+    <ClInclude Include="MilkModel.h" />
     <ClInclude Include="option.h" />
     <ClInclude Include="factory.h" />
     <ClInclude Include="log.h" />
