--- a/Vacuum-Watch/Vacuum-Watch.vcxproj.filters
+++ b/Vacuum-Watch/Vacuum-Watch.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="load_picture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MilkModel.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="load_picture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MilkModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
